--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,45 @@
-version: "3.1"
+version: '3.1'
 
 services:
-  mongo:
-    image: mongo:4.0
-    restart: always
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME
-      - MONGO_INITDB_ROOT_PASSWORD
-      - MONGO_INITDB_DATABASE
-      - MONGO_NON_ROOT_USERNAME
-      - MONGO_NON_ROOT_PASSWORD
-    volumes:
-      - ./init-data.sh:/docker-entrypoint-initdb.d/init-data.sh
 
   n8n:
-    image: n8nio/n8n
+    image: n8nio/n8n:latest
     restart: always
     environment:
-      - DB_TYPE=mongodb
-      - DB_MONGODB_CONNECTION_URL=mongodb://${MONGO_NON_ROOT_USERNAME}:${MONGO_NON_ROOT_PASSWORD}@mongo:27017/${MONGO_INITDB_DATABASE}
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER
-      - N8N_BASIC_AUTH_PASSWORD
-    ports:
-      - 5678:80
-    links:
-      - mongo
+      NODE_ENV: "production"
+      N8N_BASIC_AUTH_ACTIVE: "true"
+      N8N_BASIC_AUTH_USER: ${N8N_BASIC_AUTH_USER}
+      N8N_BASIC_AUTH_PASSWORD: ${N8N_BASIC_AUTH_PASSWORD}
+      N8N_HOST: "n8n.codingsrc.work"
+      N8N_PROTOCOL: "https"
+      N8N_PORT: "443"
+      VUE_APP_URL_BASE_API: "https://n8n.codingsrc.work/"
+      GENERIC_TIMEZONE: "Europe/Berlin"
     volumes:
-      - ~/.n8n:/root/.n8n
-    # Wait 5 seconds to start n8n to make sure that MongoDB is ready
-    # when n8n tries to connect to it
-    command: /bin/sh -c "sleep 5; n8n start"
+      - /data/n8n:/data
+
+
+  # SSL Certificate
+  certbot:
+    image: certbot/certbot
+    restart: always
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+
+  # Shared entry point for web accessible services
   nginx:
-    restart: unless-stopped
-    image: nginx
+    image: nginx:1.15-alpine
     ports:
+      - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - sslcerts:/etc/ssl/private
-    depends_on:
+    links:
       - n8n
-    entrypoint:
-      - "bash"
-      - "-c"
-    command: |
-      "if [ ! -f /etc/ssl/private/n8n.crt ]; then
-        echo 'ssl certificate missing, installing openssl to create a new one'
-        apt-get update && apt-get install openssl -y
-        openssl req -x509 -newkey rsa:2048 -sha256 -nodes -keyout /etc/ssl/private/n8n.key -out /etc/ssl/private/n8n.crt -subj '/CN=n8n.local' -days 3650
-        echo 'Created new ssl certificate'
-      fi
-      exec nginx -g 'daemon off;'"
-volumes:
-  sslcerts:
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+      - ./data/nginx/app.conf:/etc/nginx/conf.d/app.conf:ro
+      - ./data/nginx/includes/n8n.conf:/etc/nginx/conf.d/includes/n8n.conf:ro
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
