--- a/.env
+++ b/.env
@@ -1,9 +1,24 @@
-MONGO_INITDB_ROOT_USERNAME=changeUser
-MONGO_INITDB_ROOT_PASSWORD=changePassword
-MONGO_INITDB_DATABASE=n8n
+# Folder where data should be saved
+DATA_FOLDER=/root/n8n/
 
-MONGO_NON_ROOT_USERNAME=changeUser
-MONGO_NON_ROOT_PASSWORD=changePassword
+# The top level domain to serve from
+DOMAIN_NAME=example.com
 
+# The subdomain to serve from
+SUBDOMAIN=n8n
+
+# DOMAIN_NAME and SUBDOMAIN combined decide where n8n will be reachable from
+# above example would result in: https://n8n.example.com
+
+# The user name to use for autentication - IMPORTANT ALWAYS CHANGE!
 N8N_BASIC_AUTH_USER=changeUser
-N8N_BASIC_AUTH_PASSWORD=changePassword
+
+# The password to use for autentication - IMPORTANT ALWAYS CHANGE!
+N8N_BASIC_AUTH_PASSWORD=changePasswork
+
+# Optional timezone to set which gets used by Cron-Node by default
+# If not set New York time will be used
+GENERIC_TIMEZONE=Europe/Berlin
+
+# The email address to use for the SSL certificate creation
+SSL_EMAIL=user@example.com
